Fix HTML template

--- a/views/embed.jade
+++ b/views/embed.jade
@@ -8,29 +8,19 @@ mixin for(golang)
 doctype html
 html(lang='en')
   head
-    meta(charset="utf-8")
-    meta(name='theme-color', content='#CE0071')
-
-    if (v.Card != "")
-      meta(name='twitter:card', content=v.Card)
-    if (v.Title != "")
-      meta(name='twitter:title', content=v.Title)
-    if (v.ImageURL != "")
-      meta(name='twitter:image', content=v.ImageURL)
-    if (v.VideoURL != "")
-      meta(name='twitter:player:width', content=v.Width)
-      meta(name='twitter:player:height', content=v.Height)
-      meta(name='twitter:player:stream', content=v.VideoURL)
-      meta(name='twitter:player:stream:content_type', content='video/mp4')
-
-    if (v.VideoURL != "" || v.ImageURL != "")
-      meta(property='og:site_name', content='InstaFix')
-
     meta(property='og:url', content=v.URL)
-    meta(property='og:description', content=v.Description)
+    meta(property='twitter:site', content=v.Title)
+    meta(property='twitter:creator', content=v.Title)
+    meta(name='theme-color', content='#CE0071')
+    if (v.Title != "")
+      meta(property='twitter:title', content=v.Title)
 
-    if (v.ImageURL != "")
-      meta(property='og:image', content=v.ImageURL)
+    meta(property='og:title', content=v.Title)    
+    meta(property='og:description', content=v.Description)
+    if (v.VideoURL != "" || v.ImageURL != "")
+      meta(property='og:site_name', content='InstaFix')    
+
+    meta(property='twitter:card', content='summary_large_image')
 
     if (v.VideoURL != "")
       meta(property='og:video', content=v.VideoURL)
@@ -38,6 +28,14 @@ html(lang='en')
       meta(property='og:video:type', content='video/mp4')
       meta(property='og:video:width', content=v.Width)
       meta(property='og:video:height', content=v.Height)
+
+    if (v.Card != "")
+      meta(property='twitter:card', content=v.Card)
+    if (v.VideoURL != "")
+      meta(property='twitter:player:stream', content=v.VideoURL)
+      meta(property='twitter:player:stream:content_type', content='video/mp4')
+      meta(property='twitter:player:width', content=v.Width)
+      meta(property='twitter:player:height', content=v.Height)
 
     if (v.OEmbedURL != "")
       link(rel='alternate', href!=v.OEmbedURL, type='application/json+oembed', title=v.Title)
