--- a/views/embed.jade
+++ b/views/embed.jade
@@ -18,8 +18,8 @@ html(lang='en')
     if (v.ImageURL != "")
       meta(name='twitter:image', content=v.ImageURL)
     if (v.VideoURL != "")
-      meta(name='twitter:player:width', content=v.Width)
-      meta(name='twitter:player:height', content=v.Height)
+      meta(name='twitter:player:width', content="400")
+      meta(name='twitter:player:height', content="400")
       meta(name='twitter:player:stream', content=v.VideoURL)
       meta(name='twitter:player:stream:content_type', content='video/mp4')
 
@@ -36,8 +36,8 @@ html(lang='en')
       meta(property='og:video', content=v.VideoURL)
       meta(property='og:video:secure_url', content=v.VideoURL)
       meta(property='og:video:type', content='video/mp4')
-      meta(property='og:video:width', content=v.Width)
-      meta(property='og:video:height', content=v.Height)
+      meta(property='og:video:width', content="400")
+      meta(property='og:video:height', content="400")
 
     if (v.OEmbedURL != "")
       link(rel='alternate', href!=v.OEmbedURL, type='application/json+oembed', title=v.Title)
